--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<title> KEN </title>
+		<title> YAMAHA MT-07 </title>
 	</head>
 	<body>
-		<center><h1> Street Fighter - Winner</h1><center>
-		<center><img src="ken.jpg" alt="The Winner is KEN"</center>
+		<center><h1> Master of Tork</h1><center>
+		<center><img src="mt07.jpg" alt="mt07"</center>
 	</body>
 </html>
