--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title> YAMAHA MT-07 </title>
 	</head>
 	<body>
-		<center><h1> Master of Tork</h1><center>
+		<center><h1>YAMAHA MT-07 - Master of Tork</h1><center>
 		<center><img src="mt07.jpg" alt="mt07"</center>
 	</body>
 </html>
